Fix bold font in dark mode
The bold font weight looks not so different from the normal font weight,
so a new pair of font weights for bold font and normal font is applied
solely for dark mode (called `HYZhengYuan-Dark-Mode`).

--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -90,6 +90,22 @@ pre .copy-code.clicked {
 }
 
 @font-face {
+    font-family: 'HYZhengYuan-Dark-Mode';
+    src: url('/fonts/HYZhengYuan-45W.woff2') format('woff2'),
+        url('/fonts/HYZhengYuan-45W.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HYZhengYuan-Dark-Mode';
+    src: url('/fonts/HYZhengYuan-95W.woff2') format('woff2'),
+        url('/fonts/HYZhengYuan-95W.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'SauceCodePro NFM';
     src: url('/fonts/SauceCodeProNerdFontMono-Medium.woff2') format('woff2'),
         url('/fonts/SauceCodeProNerdFontMono-Medium.ttf') format('truetype');
