--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -24,13 +24,15 @@ h6 {
 }
 
 body {
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: "HYZhengYuan", sans-serif;
     font-size: 16px;
-    /* line-height: 1.6; */
     line-height: 1.6875;
     word-break: break-word;
     background: var(--theme);
+}
+
+body.dark {
+    font-family: "HYZhengYuan-Dark-Mode", sans-serif;
 }
 
 article,
